[gd_scene load_steps=6 format=3 uid="uid://d4epik40543it"]

[ext_resource type="Script" path="res://enemies/hornet/hornet.gd" id="1_ghiqj"]
[ext_resource type="Script" path="res://classes/Interpolator.gd" id="2_yfdop"]
[ext_resource type="Script" path="res://classes/HitBox.gd" id="4_sauan"]
[ext_resource type="Script" path="res://classes/AvoidanceAgent.gd" id="5_3en3k"]
[ext_resource type="Script" path="res://classes/ReversibleTimer.gd" id="6_r7j4a"]

[node name="Hornet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_ghiqj")
point_value = 5.0
max_health = 30.0
radius = 18.0

[node name="Interpolator" type="Node2D" parent="."]
script = ExtResource("2_yfdop")

[node name="Polygon2D" type="Polygon2D" parent="Interpolator"]
position = Vector2(8, 0)
rotation = 1.5708
color = Color(0.752941, 0.345098, 0.32549, 1)
polygon = PackedVector2Array(-16, 4, -12, -8, -8, 0, 8, 0, 12, -8, 16, 4, 8, 12, 0, 32, -8, 12)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(8, 0)
rotation = 1.5708
polygon = PackedVector2Array(-12, -8, -8, 0, 8, 0, 12, -8, 16, 4, 8, 12, 0, 32, -8, 12, -16, 4)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_sauan")
contact_damage_enabled = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(8, 0)
rotation = 1.5708
polygon = PackedVector2Array(-12, -8, -8, 0, 8, 0, 12, -8, 16, 4, 8, 12, 0, 32, -8, 12, -16, 4)

[node name="AvoidanceAgent" type="Node2D" parent="."]
position = Vector2(-2.2, 0)
script = ExtResource("5_3en3k")
dv_limit = 200.0
mask = 7
max_neighbors = 100
neighbor_distance = 2000.0
radius = 22.0

[node name="FireTimer" type="Node" parent="."]
script = ExtResource("6_r7j4a")
running = true
duration = 2.0

[node name="ChargeTimer" type="Node" parent="."]
script = ExtResource("6_r7j4a")
duration = 2.0

[node name="WanderTimer" type="Node" parent="."]
script = ExtResource("6_r7j4a")
reverse = true

[connection signal="pre_update" from="AvoidanceAgent" to="." method="_on_avoidance_agent_pre_update"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
